Remove statistics
Was getting too complicated; would need `put`/`delete` methods to report
it to do it properly.

Not really needed when running backups on schedule...

There's still some bugs btw...